[tool.poetry]
name = "retro-"
version = "0.1.0"
description = "Packages for Retro Causality"
authors = ["Rohit Tamidapati"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
